# TechnionProjects

./: README.md
computerArch/hw1/: CMakeLists.txt  bp.cpp  bp_api.h  bp_main.c  makefile
computerArch/hw2/: cacheSim.cpp
mtm/ex0/part1/: part1.c
mtm/ex1/part1/: CMakeLists.txt  Test.c  amount_set_str.c
mtm/ex1/part2/: CMakeLists.txt  matamikya.c  order.c  order.h  product.c  product.h
